--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -7,7 +7,7 @@
     <div id="typographyCollapse" class="collapse form-group-collapse">
         <div class="form-group">
             <label>Font size</label>
-            <input type="number" class="form-control" data-bind="textInput: $component.fontSize" />
+            <input type="number" class="form-control" min="5" max="100" data-bind="textInput: $component.fontSize" />
         </div>
 
         <div class="form-group">
