--- a/src/workshops/fonts/fontSelector.html
+++ b/src/workshops/fonts/fontSelector.html
@@ -7,7 +7,7 @@
     <ul class="list fonts">
         <li class="list-item font-box">
             <a href="#" title="Clear font" class="font-family" data-bind="click: $component.clearFonts">
-                (None)
+                (Inherit)
             </a>
         </li>
         <!-- ko foreach: { data: fonts, as: 'font' } -->
