--- a/src/workshops/shadows/shadowSelector.html
+++ b/src/workshops/shadows/shadowSelector.html
@@ -5,7 +5,7 @@
     <ul class="list">
         <li class="list-item">
             <a href="#" title="Clear shadow" class="list-item-label" data-bind="click: $component.clearShadows">
-                No shadow
+                (Inherit)
             </a>
         </li>
 
