--- a/src/workshops/animations/animationSelector.html
+++ b/src/workshops/animations/animationSelector.html
@@ -2,17 +2,19 @@
     <h1>Animation</h1>
     <hr />
 
-    <ul class="list">
-        <li class="list-item">
-            <a href="#" title="Clear animation" class="list-item-label" data-bind="click: $component.clearAnimations">
-                No animation
-            </a>
-        </li>
+    <div class="flex-container flex-container-column list-container">
+        <ul class="list" data-bind="scrollable: {}">
+            <li class="list-item">
+                <a href="#" title="Clear animation" class="list-item-label" data-bind="click: $component.clearAnimations">
+                    (Inherit)
+                </a>
+            </li>
 
-        <!-- ko foreach: { data: animations, as: 'animation' } -->
-        <li class="list-item" data-bind="css: { selected: animation.key == $component.selectedAnimation() }">
-            <a href="#" class="list-item-label" data-bind="click: $component.selectAnimation, text: animation.displayName"></a>
-        </li>
-        <!--/ko -->
-    </ul>
+            <!-- ko foreach: { data: animations, as: 'animation' } -->
+            <li class="list-item" data-bind="css: { selected: animation.key == $component.selectedAnimation() }">
+                <a href="#" class="list-item-label" data-bind="click: $component.selectAnimation, text: animation.displayName"></a>
+            </li>
+            <!--/ko -->
+        </ul>
+    </div>
 </div>
