added gradient editor

--- a/src/workshops/styleEditor/styleEditor.html
+++ b/src/workshops/styleEditor/styleEditor.html
@@ -12,6 +12,8 @@
         </div>
     </div>
 
+    <!-- <gradient-editor></gradient-editor> -->
+
     <typography params="{ typography: elementStyle.typography, onUpdate: onTypographyUpdate }"></typography>
 
     <background params="{ background: elementStyle.background, onUpdate: onBackgroundUpdate }"></background>
