a fix to ensure proper styles updates

--- a/src/livingStyleGuide/livingStyleGuide.html
+++ b/src/livingStyleGuide/livingStyleGuide.html
@@ -57,7 +57,7 @@
 
                 <article>
                     <blockquote data-bind="stylable: { elementStyle: globals.blockquote }">
-                        Typography is the craft of endowing juman language with a durable visual form. <br />
+                        Typography is the craft of endowing human language with a durable visual form. <br />
                         - Robert Bringhurst
                     </blockquote>
                 </article>
