added google fonts search. added card widget. minor fixes.

--- a/src/livingStyleGuide/livingStyleGuide.html
+++ b/src/livingStyleGuide/livingStyleGuide.html
@@ -183,5 +183,19 @@
         </nav>
     </article>
 
+    <article>
+        <h2 class="heading">Cards</h2>
+        <div class="row">
+            <div class="col col-md-4">
+                <div data-bind="stylable: { elementStyle: components.card.default }">
+                    <div class="card-body">
+                        <h1>Card</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+
     <!-- /ko -->
 </div>
