--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -31,7 +31,7 @@
                     <i class="paperbits-icon paperbits-align-right-2"></i>
                 </a>
             </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active':  textAlign() == 'justified' }" title="Justify">
+            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active':  textAlign() == 'justify' }" title="Justify">
                 <a href="#" data-bind="click: justify">
                     <i class="paperbits-icon paperbits-align-justify"></i>
                 </a>
@@ -47,6 +47,11 @@
             <label for="fontFamily">Font family</label>
             <button id="fontFamily" class="btn" data-bind="text: $component.fontName, balloon: { component: { name: 'font-selector', params: { onSelect: $component.onFontSelected } } }">
             </button>
+        </div>
+
+        <div class="form-group">
+            <label>Line height</label>
+            <input type="number" class="form-control" placeholder="(Inherit)" min="1" max="100" data-bind="textInput: $component.lineHeight" />
         </div>
 
         <div class="form-group">
