--- a/src/livingStyleGuide/livingStyleGuide.html
+++ b/src/livingStyleGuide/livingStyleGuide.html
@@ -64,7 +64,7 @@
                 </article>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-6">
                 <ul data-bind="stylable: { elementStyle: globals.ul }">
                     <li>
@@ -84,7 +84,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </article>
 
     <article>
