finished card widget. added "no shadow" option.

--- a/src/livingStyleGuide/livingStyleGuide.html
+++ b/src/livingStyleGuide/livingStyleGuide.html
@@ -201,12 +201,21 @@
         <h2 class="heading">Cards</h2>
         <div class="row">
             <div class="col col-md-4">
-                <div data-bind="stylable: { elementStyle: components.card.default }">
+                <!-- <div data-bind="stylable: { elementStyle: components.card.default }">
+                    <h1>Card</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...</p>
+                </div> -->
+
+                <!--ko foreach: { data: $component.cards, as: 'card' }-->
+                <div data-bind="stylable: { elementStyle: card }">
                     <h1>Card</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...</p>
                 </div>
+                <!--/ko-->
             </div>
         </div>
+
+        <a href="#" data-bind="click: $component.addCardVariation">Add variation</a>
     </article>
 
     <!-- /ko -->
