--- a/src/workshops/shadows/shadowSelector.html
+++ b/src/workshops/shadows/shadowSelector.html
@@ -4,7 +4,7 @@
 
     <ul class="list">
         <li class="list-item">
-            <a href="#" title="Clear shadow" class="list-item-label" data-bind="click: $component.clearShadows">
+            <a href="#" title="Clear shadow" class="list-item-label" data-bind="click: $component.clearShadow">
                 (Inherit)
             </a>
         </li>
