added info button with setting description in editors

--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -1,4 +1,5 @@
 <div class="form-group form-group-collapsible">
+    <button class="btn info-icon-btn" type="button" data-bind="infoMessageToggle: 'Manage background settings inside an element'"></button>
     <label class="form-label">
         <a href="#" class="form-group-toggle" data-bind="collapse: '#backgroundCollapse'"></a>
         <b>Background</b>
