--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -1,4 +1,5 @@
 <div class="form-group form-group-collapsible">
+    <button class="btn info-icon-btn" type="button" data-bind="infoMessageToggle: 'Manage font settings inside an element'"></button>
     <label class="form-label">
         <a href="#" class="form-group-toggle" data-bind="collapse: '#typographyCollapse'"></a>
         <b>Typography</b>
